# embeded_system

./: .gitignore  CMakeLists.txt  README.md  autorun.sh  main.cc
include/embed/: async_camera_controller.cc  async_camera_controller.h  async_model_runner.h  async_video_client.cc  async_video_client.h  cross_camera.cc  cross_camera.h  date_time.h  frequency.h  logger.h  object_detection_model.cc  object_detection_model.h  option_controller.h  ring_buffer.h  sync_stream.h
include/embed/camera/: async_camera_controller.cc  async_camera_controller.h  cross_camera.cc  cross_camera.h
include/embed/detector/: async_model_runner.h  movement_detector.cc  movement_detector.h  object_detection_model.cc  object_detection_model.h  object_detector.cc  object_detector.h
include/embed/drawable/: drawable.h  macro.h  rectangle.h  text.h
include/embed/mock_input/: camera_input.cc  camera_input.h  i_image_generator.h  image_input.cc  image_input.h  video_input.cc  video_input.h
include/embed/model/: async_model_runner.h  object_detection_model.cc  object_detection_model.h
include/embed/network/: async_video_client.cc  async_video_client.h  packet.h  protocol.h  tcp_client.cc  tcp_client.h
include/embed/utility/: async_runner.cc  async_runner.h  date_time.h  frequency.h  logger.h  ring_buffer.h  sync_stream.h
include/watcher/: option_controller.h
include/watcher/camera/: async_camera_controller.cc  async_camera_controller.h  cross_camera.cc  cross_camera.h
include/watcher/detector/: movement_detector.cc  movement_detector.h  object_detection_model.cc  object_detection_model.h
include/watcher/drawable/: drawable.h  macro.h  rectangle.h  text.h
include/watcher/mock_input/: camera_input.cc  camera_input.h  i_image_generator.h  image_input.cc  image_input.h  video_input.cc  video_input.h
include/watcher/network/: async_video_client.cc  async_video_client.h  packet.h  protocol.h  tcp_client.cc  tcp_client.h
include/watcher/utility/: async_runner.cc  async_runner.h  date_time.h  frequency.h  logger.h  ring_buffer.h  sync_stream.h
input/: camera_input.cc  camera_input.h  i_image_generator.h  image_input.cc  image_input.h  video_input.cc  video_input.h
